<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="stock_hawk">Stock Hawk</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="make_your_app">MAKE YOUR APP MATERIAL</string>
    <string name="go_ubiquitous">Go Ubquitous</string>
    <string name="capstone">Capstone</string>
</resources>
