<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.neha.myappportfolio.MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:text="My NanoDegree Apps!"
        android:id="@+id/textNanoDegreeApps"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:gravity="center"
        android:textSize="30dp"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/holo_blue_light" />

    <Button
        android:layout_width="301dp"
        android:layout_height="wrap_content"
        android:text="@string/popular_movies"
        android:id="@+id/button1"
        android:layout_gravity="center_horizontal"
        android:background="#104e85"
        android:textColor="@color/abc_primary_text_material_dark"
        android:layout_marginBottom="10dp" />

    <Button
        android:layout_width="301dp"
        android:layout_height="wrap_content"
        android:text="@string/stock_hawk"
        android:id="@+id/button2"
        android:layout_gravity="center_horizontal"
        android:background="#104e85"
        android:textColor="@color/abc_primary_text_material_dark"
        android:layout_marginBottom="10dp"/>

    <Button
        android:layout_width="301dp"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger"
        android:id="@+id/button3"
        android:layout_gravity="center_horizontal"
        android:background="#104e85"
        android:textColor="@color/abc_primary_text_material_dark"
        android:layout_marginBottom="10dp"/>

    <Button
        android:layout_width="301dp"
        android:layout_height="wrap_content"
        android:text="@string/make_your_app"
        android:id="@+id/button4"
        android:layout_gravity="center_horizontal"
        android:background="#104e85"
        android:textColor="@color/abc_primary_text_material_dark"
        android:layout_marginBottom="10dp"/>

    <Button
        android:layout_width="301dp"
        android:layout_height="wrap_content"
        android:text="@string/go_ubiquitous"
        android:id="@+id/button5"
        android:layout_gravity="center_horizontal"
        android:background="#104e85"
        android:textColor="@color/abc_primary_text_material_dark"
        android:layout_marginBottom="10dp"/>

    <Button
        android:layout_width="301dp"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:id="@+id/button6"
        android:layout_gravity="center_horizontal"
        android:background="#104e85"
        android:textColor="@color/abc_primary_text_material_dark"
        android:layout_marginBottom="10dp"/>
</LinearLayout>
